--- a/configure.ac
+++ b/configure.ac
@@ -1061,7 +1061,6 @@ AC_CONFIG_FILES([Makefile
                  lib/CL/devices/tce/ttasim/Makefile
                  lib/CL/devices/topology/Makefile
                  lib/CL/devices/cellspu/Makefile
-                 lib/llvmopencl/Makefile
                  lib/kernel/Makefile
                  lib/poclu/Makefile
                  examples/Makefile
@@ -1092,6 +1091,8 @@ AC_CONFIG_FILES([Makefile
                  tests/cell/Makefile
                  tests/cell/hello/Makefile
                  ])
+
+AC_CONFIG_SUBDIRS([lib/llvmopencl])
 
 AC_OUTPUT
 
