--- a/lib/llvmopencl/Makefile.am
+++ b/lib/llvmopencl/Makefile.am
@@ -22,6 +22,8 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
+ACLOCAL_AMFLAGS = -I ../../m4
+
 if USE_LLVM_API
 noinst_LTLIBRARIES = libllvmpasses.la
 else
