--- a/lib/llvmopencl/configure.ac
+++ b/lib/llvmopencl/configure.ac
@@ -26,7 +26,7 @@ AC_PREREQ([2.64])
 AC_INIT([pocl], [0.9-pre], [pocl-devel@lists.sourceforge.net])
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADER([config.h])
-AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_MACRO_DIR([../../m4])
 AC_CANONICAL_TARGET
 AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE([foreign])
