--- a/scripts/pocl-standalone.in
+++ b/scripts/pocl-standalone.in
@@ -78,20 +78,27 @@ CLANG_FLAGS="$CLANG_FLAGS -fasm -fsigned-char -Xclang -ffake-address-space-map -
 # the mul+add separated in the IR.
 CLANG_FLAGS="$CLANG_FLAGS -ffp-contract=off "
 
+CLANG="@CLANG@"
+OPT="@OPT@"
+# BEGIN REMOVE ONCE INSTALLED
+CLANG="@CLANG_FOR_BUILD@"
+OPT="@OPT_FOR_BUILD@"
+# END REMOVE ONCE INSTALLED
+
 tempdir="`dirname ${output_file}`/.pocl$$"
 mkdir ${tempdir}
 
 kernel_bc="${tempdir}/kernel.bc"
 
 # BEGIN REMOVE ONCE INSTALLED
-@CLANG@ ${CLANG_FLAGS} $EXTRA_CLANG_FLAGS -c -emit-llvm -I@abs_top_builddir@ -include @abs_top_builddir@/include/${target_dir}/types.h -include @abs_top_srcdir@/include/_kernel.h -o ${kernel_bc} -x cl $1
+"${CLANG}" ${CLANG_FLAGS} $EXTRA_CLANG_FLAGS -c -emit-llvm -I@abs_top_builddir@ -include @abs_top_builddir@/include/${target_dir}/types.h -include @abs_top_srcdir@/include/_kernel.h -o ${kernel_bc} -x cl $1
 rm -f ${header}
-@OPT@ -load=@abs_top_builddir@/lib/@llvmopencl_dir@/.libs/llvmopencl.so -generate-header -disable-output -header=${header} ${kernel_bc}
+"${OPT}" -load=@abs_top_builddir@/lib/@llvmopencl_dir@/.libs/llvmopencl.so -generate-header -disable-output -header=${header} ${kernel_bc}
 if false ; then
 # END REMOVE ONCE INSTALLED
-@CLANG@ ${CLANG_FLAGS} $EXTRA_CLANG_FLAGS -c -emit-llvm  -include @pkgincludedir@/${target_dir}/types.h -include @pkgincludedir@/_kernel.h -o ${kernel_bc} -x cl $1
+"${CLANG}" ${CLANG_FLAGS} $EXTRA_CLANG_FLAGS -c -emit-llvm  -include @pkgincludedir@/${target_dir}/types.h -include @pkgincludedir@/_kernel.h -o ${kernel_bc} -x cl $1
 rm -f ${header}
-@OPT@ -load=@pkglibdir@/llvmopencl.so -generate-header -disable-output -header=${header} ${kernel_bc}
+"${OPT}" -load=@pkglibdir@/llvmopencl.so -generate-header -disable-output -header=${header} ${kernel_bc}
 # BEGIN REMOVE ONCE INSTALLED
 fi
 # END REMOVE ONCE INSTALLED
@@ -137,7 +144,7 @@ fi
 # also be harmful for wg-vectorization where we want to try to vectorize
 # the code it wants to convert e.g. to a memset or a memcpy
 
-@OPT@ -load=${pocl_lib} -domtree -workitem-handler-chooser -break-constgeps -generate-header -flatten -always-inline \
+"${OPT}" -load=${pocl_lib} -domtree -workitem-handler-chooser -break-constgeps -generate-header -flatten -always-inline \
     -globaldce -simplifycfg -loop-simplify -phistoallocas -isolate-regions -loop-barriers \
     -barriertails -barriers -isolate-regions -add-wi-metadata -wi-aa -workitemrepl -workitemloops \
     -workgroup -kernel=${kernel} -local-size=1 1 1 -disable-simplify-libcalls ${OPT_SWITCH} \
