--- a/scripts/pocl-kernel.in
+++ b/scripts/pocl-kernel.in
@@ -52,11 +52,19 @@ header="`dirname $1`/`basename $1 .bc`_header.h"
 
 rm -f ${header}
 
+CLANG="@CLANG@"
+OPT="@OPT@"
 # BEGIN REMOVE ONCE INSTALLED
-@OPT@ -load=@abs_top_builddir@/lib/@llvmopencl_dir@/.libs/llvmopencl.so -break-constgeps -generate-header -kernel=${kernel} -header=${header} -disable-output $1
+CLANG="@CLANG_FOR_BUILD@"
+OPT="@OPT_FOR_BUILD@"
+# END REMOVE ONCE INSTALLED
+
+
+# BEGIN REMOVE ONCE INSTALLED
+"${OPT}" -load=@abs_top_builddir@/lib/@llvmopencl_dir@/.libs/llvmopencl.so -break-constgeps -generate-header -kernel=${kernel} -header=${header} -disable-output $1
 if false ; then
 # END REMOVE ONCE INSTALLED
-@OPT@ -load=@pkglibdir@/llvmopencl.so -break-constgeps -generate-header -kernel=${kernel} -header=${header} -disable-output $1
+"${OPT}" -load=@pkglibdir@/llvmopencl.so -break-constgeps -generate-header -kernel=${kernel} -header=${header} -disable-output $1
 # BEGIN REMOVE ONCE INSTALLED
 fi
 # END REMOVE ONCE INSTALLED
@@ -68,7 +76,7 @@ case $target in
   *)
     target_flags="-target $target";;
 esac
-@CLANG@ @HOST_CLANG_FLAGS@ $target_flags -c -o ${output_file}.o -x c - <<EOF
+"${CLANG}" @HOST_CLANG_FLAGS@ $target_flags -c -o ${output_file}.o -x c - <<EOF
 
 #include "${header}"
 
